<resources>
    <string name="app_name">RLA Healthy</string>
    <string name="app_title">Rahmatan Lil Alamin</string>
    <string name="app_description">Jantung • Suhu • Gula</string>
    <string name="patient_number">#1</string>
    <string name="patient_time">Riwayat</string>
    <string name="patient_name">Nama</string>
    <string name="patient_gender">Kelamin</string>
    <string name="patient_age">Umur</string>
    <string name="patient_handphone">No. HP</string>
    <string name="patient_day">Hari</string>
    <string name="patient_month">Bulan</string>
    <string name="patient_year">Tahun</string>
    <string name="patient_heart">Jantung</string>
    <string name="patient_temperature">Suhu</string>
    <string name="patient_glucose">Gula</string>
    <string name="doctor_name">Nama</string>
    <string name="doctor_password">Kata Sandi</string>
</resources>