<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".patienttime.PatientTimeDetailsFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            tools:ignore="HardcodedText">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_patient_dm"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/primary_bold"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_patient_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:text="@string/patient_day"/>
                    <TextView
                        android:id="@+id/tv_patient_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:fontFamily="@font/poppins"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@string/patient_month"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tv_patient_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/primary_bold"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/patient_year"
                app:layout_constraintTop_toTopOf="@id/cv_patient_dm"
                app:layout_constraintBottom_toBottomOf="@id/cv_patient_dm"
                app:layout_constraintStart_toEndOf="@id/cv_patient_dm"
                app:layout_constraintEnd_toEndOf="parent"/>
            <LinearLayout
                android:id="@+id/ll_patient_heart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/cv_patient_dm"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/patient_heart"/>
                <TextView
                    android:id="@+id/tv_patient_heart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textAlignment="center"
                    android:text="100"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_patient_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_patient_heart"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/patient_temperature"/>
                <TextView
                    android:id="@+id/tv_patient_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textAlignment="center"
                    android:text="30"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_patient_glucose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/ll_patient_temperature"
                app:layout_constraintStart_toStartOf="parent">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/patient_glucose"/>
                <TextView
                    android:id="@+id/tv_patient_glucose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textAlignment="center"
                    android:text="100"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/button_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/back_button"
                app:layout_constraintTop_toBottomOf="@id/ll_patient_glucose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>