<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".patient.PatientDetailsActivity"
    tools:ignore="ContentDescription">
    <ImageView
        android:id="@+id/button_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/iv_patient_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:src="@drawable/patient_one"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/ll_patient_na"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/iv_patient_image">
        <TextView
            android:id="@+id/tv_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/patient_name"/>
        <TextView
            android:id="@+id/tv_patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/patient_age"/>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_patient_htg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/ll_patient_na">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            tools:ignore="HardcodedText">
            <LinearLayout
                android:id="@+id/ll_patient_heart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ll_patient_temperature">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/patient_heart"/>
                <TextView
                    android:id="@+id/tv_patient_heart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="100"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_patient_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ll_patient_heart"
                app:layout_constraintEnd_toStartOf="@id/ll_patient_glucose">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/patient_temperature"/>
                <TextView
                    android:id="@+id/tv_patient_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="30"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_patient_glucose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ll_patient_temperature"
                app:layout_constraintEnd_toEndOf="parent">
                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/patient_glucose"/>
                <TextView
                    android:id="@+id/tv_patient_glucose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="100"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="-30dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/cv_patient_htg"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:background="@color/white"
            android:paddingTop="55dp">
            <TextView
                android:id="@+id/tv_patient_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textAlignment="center"
                android:text="@string/patient_time"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fcv_patient_time"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:defaultNavHost="true"
                app:navGraph="@navigation/navigation_graph"
                app:layout_constraintTop_toBottomOf="@id/tv_patient_time"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>